--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-
-        <!-- Normalize CSS -->
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-            integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-        />
+        <title>Inicio</title>
 
         <!-- Main CSS -->
         <link rel="stylesheet" href="css/global.css" />
@@ -73,7 +64,7 @@
                     </nav>
                 </div>
             </div>
-            <div class="container menu">
+            <div class="container menu floating">
                 <img
                     class="logo"
                     src="assets/logo_blanco.png"
